--- a/ANDRIANASOLOHARISON_Tsiory_HANGMAN/ANDRIANASOLOHARISON_Tsiory_HANGMAN.csproj
+++ b/ANDRIANASOLOHARISON_Tsiory_HANGMAN/ANDRIANASOLOHARISON_Tsiory_HANGMAN.csproj
@@ -108,5 +108,14 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\1.png" />
+    <Resource Include="Images\2.png" />
+    <Resource Include="Images\3.png" />
+    <Resource Include="Images\4.png" />
+    <Resource Include="Images\5.png" />
+    <Resource Include="Images\6.png" />
+    <Resource Include="Images\7.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
